<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/dicoding"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_dicoding"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/ibUserDetail"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/ibAddStory"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ibLocation"
        app:layout_constraintTop_toTopOf="@+id/dicoding"
        app:srcCompat="@drawable/ic_baseline_person_outline" />

    <ImageButton
        android:id="@+id/ibLocation"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/dicoding"
        app:layout_constraintTop_toTopOf="@+id/dicoding"
        app:srcCompat="@drawable/ic_baseline_location" />

    <ImageButton
        android:id="@+id/ibAddStory"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dicoding"
        app:srcCompat="@drawable/ic_baseline_add"
        android:contentDescription="@string/upload" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/selamat_datang"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dicoding" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/tvWelcome"
        app:layout_constraintTop_toTopOf="@+id/tvWelcome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        tools:listitem="@layout/item_story" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>